# VeriDoc

./: .env.example  .gitignore  CLAUDE.md  PRD.md  PROJECT_SPEC.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  eval-regression.yml
eval/: REPORT.md  metrics.py  regression.py  router_eval.py  run.py
eval/labels/: README.md  bankstmt_digital_type1_00001.json  bankstmt_digital_type1_00002.json  bankstmt_digital_type1_00003.json  bankstmt_digital_type1_00004.json  bankstmt_digital_type1_00005.json  bankstmt_digital_type1_00006.json  bankstmt_digital_type1_00007.json  bankstmt_digital_type1_00008.json  bankstmt_digital_type1_00009.json  bankstmt_digital_type1_00010.json  bankstmt_digital_type1_00011.json  bankstmt_digital_type1_00012.json  (+118 more)
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
infra/: Dockerfile.api
scripts/: create_label.py  extract_document.py  extract_invoice.py  import_bank_statement_batch.py  import_batch_labels.py
tests/: conftest.py  test_extractor.py  test_gemini_client.py  test_graph.py  test_groq_client.py  test_import_bank_statement_batch.py  test_ingest.py  test_mcp_server.py  test_metrics.py  test_models.py  test_rag_embeddings.py  test_rag_exemplar_text.py  test_rag_retrieval.py  test_rag_store.py  test_regression.py  test_router.py  test_router_eval.py  test_run_cache.py  test_sanity.py  test_trust_metrics.py
training/: prepare_router_data.py  router_finetune.ipynb  train_router.py
web/: .gitkeep
(+67 files in other folders)
