[project]
name = "veridoc"
version = "0.1.0"
description = "VLM-native document intelligence with calibrated confidence and abstention"
requires-python = ">=3.11,<3.12"
dependencies = [
    "google-genai>=1.0",
    "groq>=0.11",
    "instructor>=1.4",
    "langfuse>=3.0",
    "pydantic>=2.10",
    "pypdfium2>=4.30",
    "Pillow>=10.4",
    "python-dotenv>=1.0",
    "langgraph>=1.2.5",
    "mcp>=1.27.2",
    "sqlalchemy>=2.0.51",
    "psycopg[binary]>=3.3.4",
    "pgvector>=0.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
